# manimations

./: .gitignore  LICENSE  Makefile  check.ps1  clean.ps1  help.ipynb  manim.cfg  pyproject.toml
manimations/: gmm.py  kmeans.py  lda.py  pca.py
