[tool.poetry]
name = "manimations"
version = "0.1.0"
description = ""
authors = ["NyxAether <contact.nyxhemera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
manim = "^0.18.0.post0"
notebook = "^7.1.3"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.0"
mypy = "^1.9.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
isort = "^5.13.2"
pydantic = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
